robot_architecture/v0.0.2/23.md
|==========|==========|==========|==========| Chapter 23 - Background Workers |==========|==========|==========|==========|

# Chapter 23 - Background Workers

## 23.1 Overview

Background Workers provide RoBoT with the ability to perform long-running, resource-intensive, and asynchronous operations without blocking the primary cognitive pipeline.

The core cognitive loop must remain responsive:

```
User Input
    ↓
Context Engine
    ↓
Memory Retrieval
    ↓
Planning Engine
    ↓
Execution Engine
    ↓
Response
```

Background Workers operate beside this loop:

```
                 ┌────────────────────┐
                 │  Cognitive Loop    │
                 └─────────┬──────────┘
                           │
                           ▼
                 ┌────────────────────┐
                 │  Event System      │
                 └─────────┬──────────┘
                           │
          ┌────────────────┼────────────────┐
          ▼                ▼                ▼

     Memory Worker   Learning Worker   Maintenance Worker

          ▼                ▼                ▼

     Memory DB       Knowledge Graph    System Health
```

Workers are not independent minds.

They are specialized processes that maintain, improve, and organize RoBoT's internal systems.

---

# 23.2 Design Philosophy

Background processing follows several principles.

## Non-Blocking Intelligence

The cognitive system should never wait for:

- database cleanup
- embedding generation
- document ingestion
- graph updates
- confidence recalculation
- experience analysis
- model evaluation

Instead:

```
Task Created
      ↓
Event Published
      ↓
Worker Processes Task
      ↓
Result Stored
      ↓
System Updated
```

---

## Controlled Autonomy

Workers do not run uncontrolled loops.

Every worker has:

- defined responsibilities
- resource limits
- failure handling
- logging
- status reporting
- restart behavior

A worker should never silently modify core knowledge.

All important changes must leave an audit trail.

---

## Event Driven Architecture

Workers communicate through events rather than direct dependencies.

Example:

```
Experience Completed

        ↓

ExperienceEvent

        ↓

Learning Worker

        ↓

Skill Update

        ↓

Confidence Adjustment
```

This keeps systems loosely coupled.

---

# 23.3 Worker Architecture

The Worker System consists of five layers.

```
Background Worker System

        ┌─────────────────────┐
        │ Worker Supervisor   │
        └─────────┬───────────┘
                  │
        ┌─────────┴───────────┐
        │ Task Queue           │
        └─────────┬───────────┘
                  │
        ┌─────────┴───────────┐
        │ Worker Pool          │
        └─────────┬───────────┘
                  │
        ┌─────────┴───────────┐
        │ System Services      │
        └─────────────────────┘
```

---

# 23.4 Worker Supervisor

The Worker Supervisor manages all background activity.

Responsibilities:

- start workers
- stop workers
- restart failed workers
- monitor health
- track execution statistics
- enforce limits

Example:

```
Worker Status

Memory Worker
    State: Running
    Tasks Completed: 12,451
    Failures: 3
    Last Run: 12 seconds ago

Learning Worker
    State: Waiting
    Tasks Completed: 843
```

---

# 23.5 Task Queue

The Task Queue provides controlled execution.

Tasks contain:

```
Task

id
type
priority
created_at
status
payload
attempt_count
worker_type
completed_at
error
```

Example:

```json
{
  "type": "PROCESS_MEMORY",
  "priority": "NORMAL",
  "payload": {
    "memory_id": "12345"
  }
}
```

---

# 23.6 Worker Types

## 23.6.1 Memory Worker

Purpose:

Maintain and improve the Memory System.

Responsibilities:

- generate embeddings
- process imported documents
- summarize memories
- consolidate duplicate information
- update memory relationships
- prepare retrieval indexes

Pipeline:

```
New Information

        ↓

Memory Worker

        ↓

Classification

        ↓

Embedding Generation

        ↓

Knowledge Graph Update

        ↓

Memory Storage
```

The Memory Worker never decides importance alone.

Importance is determined through:

- confidence
- relevance
- repetition
- relationships
- experience feedback

---

# 23.6.2 Experience Worker

Purpose:

Process completed experiences.

Responsibilities:

- analyze outcomes
- extract lessons
- identify failures
- identify successful patterns
- update experience records

Flow:

```
Completed Task

      ↓

Experience Worker

      ↓

Outcome Analysis

      ↓

Pattern Extraction

      ↓

Experience Database
```

Experience is not memory.

Experience records:

"What happened."

Memory records:

"What is known."

---

# 23.6.3 Learning Worker

Purpose:

Convert experiences into improvements.

Responsibilities:

- detect repeated patterns
- update skill confidence
- create new knowledge candidates
- evaluate workflows
- identify missing capabilities

Example:

```
100 successful Rust builds

        ↓

Learning Worker

        ↓

Rust Build Skill Confidence Increased

        ↓

Planner Prefers Rust Workflow
```

Learning requires evidence.

A single event should not permanently alter behavior.

---

# 23.6.4 Knowledge Graph Worker

Purpose:

Maintain relationships between concepts.

Responsibilities:

- create relationships
- remove weak relationships
- update relationship confidence
- detect clusters
- maintain graph consistency

Example:

```
Rust

 ├── requires
 │
 └── Ownership Concepts

confidence: 0.91
```

Relationships have their own confidence values.

---

# 23.6.5 Maintenance Worker

Purpose:

Keep the system healthy.

Responsibilities:

- database cleanup
- orphan detection
- cache management
- storage optimization
- log rotation
- integrity checks

Maintenance must never remove information without:

- archive creation
- audit logging
- recovery capability

---

# 23.7 Worker Scheduling

Workers support multiple execution modes.

## Immediate

Used for important tasks.

Example:

```
New user memory

Immediately process
```

---

## Scheduled

Used for periodic maintenance.

Example:

```
Every night:

- optimize database
- clean cache
- rebuild indexes
```

---

## Resource Based

Workers adapt to available resources.

Example:

```
GPU Available

      ↓

Enable embedding batch processing


GPU Busy

      ↓

Delay non-critical jobs
```

---

# 23.8 SQLite Worker Coordination

The initial implementation uses SQLite as the worker coordination database.

Example tables:

```
worker_tasks

worker_status

worker_history

worker_errors
```

---

## worker_tasks

Tracks queued operations.

```
id
task_type
priority
status
created
started
completed
payload
```

---

## worker_status

Tracks active workers.

```
worker_name
state
last_heartbeat
current_task
```

---

## worker_history

Provides operational memory.

```
task_id
worker
result
duration
timestamp
```

---

# 23.9 Worker Failure Handling

Failures are expected.

Every worker supports:

## Retry

Temporary failure:

```
Attempt 1
   ↓
Failed
   ↓
Retry
   ↓
Success
```

---

## Backoff

Repeated failures increase delay.

Example:

```
1 minute
5 minutes
30 minutes
2 hours
```

---

## Isolation

A failed worker cannot crash the cognitive system.

Example:

```
Learning Worker Crash

        X

Conversation Engine

        ✓

Memory Retrieval

        ✓
```

---

# 23.10 Worker Observability

Future debugging requires visibility into internal operations.

Workers produce:

- execution traces
- timing information
- errors
- decisions
- input/output summaries

Example:

```
Memory Worker Trace

Received:
    Document #42

Actions:
    Extracted 300 chunks
    Created 280 embeddings
    Added 15 graph relations

Result:
    Completed
```

This creates the foundation for future cognitive visualization.

---

# 23.11 Resource Management

Workers must respect hardware limits.

Resources:

- CPU usage
- RAM usage
- GPU availability
- disk usage
- database locks

Priority levels:

```
CRITICAL

HIGH

NORMAL

LOW

BACKGROUND
```

Example:

Conversation response:

CRITICAL

Memory cleanup:

LOW

---

# 23.12 Rust Implementation Direction

The Worker System is designed around Rust async architecture.

Expected components:

```
src/
 └── workers/
      ├── supervisor.rs
      ├── scheduler.rs
      ├── queue.rs
      ├── memory_worker.rs
      ├── learning_worker.rs
      ├── experience_worker.rs
      ├── knowledge_worker.rs
      └── maintenance_worker.rs
```

Likely technologies:

- Tokio async runtime
- channels for communication
- SQLite persistence
- structured logging
- serde serialization

---

# 23.13 Future Distributed Workers

The architecture allows future expansion.

Possible deployment:

```
Main RoBoT Instance

        ↓

Worker Coordinator

        ↓

Local Workers

        ↓

Remote Workers
```

Examples:

- GPU machine handles embeddings
- Server handles large ingestion jobs
- Laptop handles maintenance

The architecture does not require distributed operation, but does not prevent it.

---

# 23.14 Security and Trust

Workers operate with permissions.

A worker must declare:

- what data it can access
- what systems it can modify
- what confidence changes it can make

Example:

Memory Worker:

Allowed:

✓ Create memories
✓ Create embeddings
✓ Update metadata

Not allowed:

✗ Delete permanent knowledge
✗ Change core identity
✗ Override confidence rules

---

# 23.15 Summary

Background Workers provide RoBoT with continuous improvement without sacrificing responsiveness.

They transform RoBoT from a request-response program into a continuously maintained cognitive system.

The Worker System provides:

- asynchronous processing
- controlled autonomy
- system reliability
- learning pipelines
- memory maintenance
- experience processing
- future scalability

The goal is not to create hidden background activity.

The goal is to create a transparent internal ecosystem where every improvement has a path, every process has ownership, and every change can be understood.

This chapter fits naturally after Chapter 22 - Database Design because the database becomes the worker coordination layer. The next logical chapter would likely be Chapter 24 - Security and Permission Architecture, because once you have autonomous workers touching memory, experience, and knowledge, permissions become a core part of keeping the "brain" stable.

